[gd_scene load_steps=15 format=3 uid="uid://d1fujxqcejq5f"]

[ext_resource type="Script" path="res://Script/Entity/Ally/Drone.gd" id="1_h73yv"]
[ext_resource type="Texture2D" uid="uid://cci7kuhxb6617" path="res://Asset/Weapon/Infantry.png" id="1_jht3n"]
[ext_resource type="AudioStream" uid="uid://cc2kfkfl0pat4" path="res://Asset/Weapon/Sound/Chaser.mp3" id="3_65h4q"]
[ext_resource type="Texture2D" uid="uid://0ec7pv1cihxj" path="res://Asset/Weapon/Light.png" id="3_jlhf5"]
[ext_resource type="AudioStream" uid="uid://6ty7nfpe7y84" path="res://Asset/Weapon/Sound/Chaser_shoot.mp3" id="4_ig248"]

[sub_resource type="Curve" id="Curve_d0hce"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(2e-05, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_n8ich"]
offsets = PackedFloat32Array(0, 0.684713, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0.313726, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_14qp5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(2e-05, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_t1pup"]
colors = PackedColorArray(0.5, 0.5, 0.5, 0.392157, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_vog8g"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0tkg"]
size = Vector2(60, 56)

[sub_resource type="Animation" id="Animation_p0ifx"]
resource_name = "Deploy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Gun:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [3.14159, 0.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Propeller:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, 0.349066]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Propeller2:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, 0.349066]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Propeller:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-12, -7), Vector2(5, -7), Vector2(5, -7)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Propeller2:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-12, 3), Vector2(-27, 3), Vector2(-27, 3)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sound")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/Propeller/Wind")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/Propeller2/Wind")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Body:rotation")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-3.14159, 0.0, 0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Body/Gun:position")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(15, 9), Vector2(-28, 9), Vector2(-28, 9)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Body/Gun/Sprite2D:position")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-1, 7), Vector2(31, 7), Vector2(31, 7)]
}

[sub_resource type="Animation" id="Animation_gfg0i"]
resource_name = "Shoot"
length = 0.200003
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-28, 9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Gun:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Propeller:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.349066]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Propeller2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.349066]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Gun/Flash/PointLight2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.025, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 0), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lmayu"]
_data = {
"Deploy": SubResource("Animation_p0ifx"),
"Shoot": SubResource("Animation_gfg0i")
}

[node name="Drone" type="RigidBody2D"]
collision_layer = 4
collision_mask = 0
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_h73yv")

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(0, 15)
rotation = -3.14159
texture = ExtResource("1_jht3n")
offset = Vector2(0, 16)
hframes = 2
vframes = 2

[node name="Gun" type="Sprite2D" parent="Body"]
position = Vector2(15, 9)
rotation = 3.14159
texture = ExtResource("1_jht3n")
offset = Vector2(13, 28)
hframes = 2
vframes = 2
frame = 1

[node name="Fire" type="Marker2D" parent="Body/Gun"]
position = Vector2(64, 11)

[node name="Load" type="Marker2D" parent="Body/Gun"]
position = Vector2(9, 11)

[node name="Flash" type="CPUParticles2D" parent="Body/Gun"]
show_behind_parent = true
position = Vector2(64, 11)
emitting = false
amount = 20
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
local_coords = true
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_max = 100.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_d0hce")
color_ramp = SubResource("Gradient_n8ich")

[node name="Flash2" type="CPUParticles2D" parent="Body/Gun/Flash"]
show_behind_parent = true
emitting = false
amount = 20
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
local_coords = true
spread = 120.0
gravity = Vector2(0, 0)
initial_velocity_max = 50.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_d0hce")
color_ramp = SubResource("Gradient_n8ich")

[node name="PointLight2D" type="PointLight2D" parent="Body/Gun/Flash"]
scale = Vector2(1e-05, 1e-05)
range_layer_max = 5
texture = ExtResource("3_jlhf5")

[node name="Gas" type="CPUParticles2D" parent="Body/Gun"]
z_index = 1
position = Vector2(64, 11)
emitting = false
amount = 100
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
spread = 120.0
gravity = Vector2(0, 0)
initial_velocity_max = 50.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_14qp5")
color_ramp = SubResource("Gradient_t1pup")

[node name="Sprite2D" type="Sprite2D" parent="Body/Gun"]
show_behind_parent = true
position = Vector2(-1, 7)
texture = ExtResource("1_jht3n")
offset = Vector2(-20, 20)
hframes = 2
vframes = 2
frame = 3

[node name="Propeller" type="Sprite2D" parent="Body"]
position = Vector2(-12, -7)
texture = ExtResource("1_jht3n")
offset = Vector2(5, -4)
hframes = 2
vframes = 2
frame = 2

[node name="Wind" type="CPUParticles2D" parent="Body/Propeller"]
emitting = false
amount = 100
lifetime = 0.5
emission_shape = 3
emission_rect_extents = Vector2(30, 1)
scale_amount_min = 2.0
scale_amount_max = 5.0
color = Color(0.7, 0.7, 0.7, 1)
color_ramp = SubResource("Gradient_vog8g")

[node name="Propeller2" type="Sprite2D" parent="Body"]
position = Vector2(-12, 3)
texture = ExtResource("1_jht3n")
offset = Vector2(5, -4)
hframes = 2
vframes = 2
frame = 2

[node name="Wind" type="CPUParticles2D" parent="Body/Propeller2"]
amount = 20
lifetime = 0.5
emission_shape = 3
emission_rect_extents = Vector2(30, 1)
direction = Vector2(0, 1)
spread = 0.0
initial_velocity_min = 500.0
initial_velocity_max = 500.0
scale_amount_min = 2.0
scale_amount_max = 5.0
color = Color(0.7, 0.7, 0.7, 1)
color_ramp = SubResource("Gradient_vog8g")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_y0tkg")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lmayu")
}

[node name="Fire_delay" type="Timer" parent="."]
one_shot = true

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_65h4q")
max_distance = 5000.0

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ig248")
max_distance = 10000.0
max_polyphony = 100

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
